<resources>
    <string name="app_name">Monete</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password" translatable="false">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="monetebalance">Balance</string>
    <string name="rupiahmonete">Rp.</string>
    <string name="currbal">Current Balance</string>
    <string name="coinscollect">Collect Your Coins</string>
    <string name="add5">5</string>
    <string name="add10">10</string>
    <string name="addnewrecord">Input Record</string>
    <string name="inputtype">Input Type</string>
    <string name="dateinput">Date</string>
    <string name="amountinput">Amount</string>
    <string name="rupiahinput">Rp.</string>
    <string name="taginput">Tag</string>
    <string name="memoinput">Memo</string>
    <string name="limitinput">Limit</string>
    <string name="limit">(75 Character Limit )</string>
    <string name="addbutton">Add</string>
    <string name="discardbutton">Discard</string>
    <string name="none" />
    <string name="homenavbar">Home</string>
    <string name="historynavbar">History</string>
    <string name="settingsnavbar">Settings</string>
    <string name="settingstext">Settings</string>
    <string name="editprofilebtn">Edit Profile</string>
    <string name="coinssettings">Coins</string>
    <string name="expenselimsettings">Expense Limit</string>
    <string name="currsettings">Currency</string>
    <string name="langsettings">Language</string>
    <string name="textsizesettings">Text Size</string>
    <string name="mythemessettings">My Themes</string>
    <string name="applysettings">Apply</string>
    <string name="resetsettings">Reset</string>
    <string name="signoutsettings">Sign Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu">Menu</string>
    <string name="menu_home">Home</string>
    <string name="menu_history">History</string>
    <string name="settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="history_money_input">55,000</string>
    <string name="memo_history">Pergi ke MOG</string>
    <string name="type">Expense</string>
    <string name="id">01</string>
    <string name="hist_id">01</string>
    <string name="hist_type">Expense</string>
    <string name="hist_money">55000</string>
    <string name="hist_memo">Pergi ke MOG</string>
    <string name="sett_coins">120</string>
    <string name="sett_name">Name</string>
    <string name="sett_email">Email</string>
    <string name="fr_inputtype">Input Type</string>
    <string name="fr_amount">Amount</string>
    <string name="fr_date">Date</string>
    <string name="fr_tag">Tag</string>
    <string name="fr_memo">Memo</string>
    <string name="fr_dateInput" />
    <string name="LoginTitle">Log In</string>
    <string name="btnlogin">Log In</string>
    <string name="btnsignup">Sign Up</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="loginEmail">Email</string>
    <string name="loginPassword">Password</string>
    <string name="analysistext">Analysis:</string>
    <string name="incomeoverview">Income</string>
    <string name="expenseoverview">Expense</string>
    <string name="highestexpenseoverview">Highest Expense</string>
    <string name="lowestexpenseoverview">Lowest Expense</string>
    <string name="totalbalanceoverview">Total Balance</string>

    <string-array name="inputType">
        <item>Income</item>
        <item>Expense</item>
    </string-array>

    <string-array name="tags">
        <item>Groceries</item>
        <item>Entertainment</item>
        <item>Transport</item>
        <item>FnB</item>
        <item>Bills</item>
        <item>Debt</item>
        <item>Shopping</item>
        <item>Earnings</item>
    </string-array>
</resources>
