<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <EditText
        android:id="@+id/editTxtEmail"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@drawable/inputbox"
        android:ems="10"
        android:hint="@string/loginEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MoneteLogo" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="88dp"
        android:layout_height="39dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/primarybutton"
        android:text="@string/btnlogin"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/editTxtPassword"
        app:layout_constraintTop_toBottomOf="@+id/btnForgotPassword" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="86dp"
        android:layout_height="40dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/secondaybutton"
        android:text="@string/btnsignup"
        android:textAllCaps="false"
        android:textColor="#A19892"
        app:layout_constraintBottom_toBottomOf="@+id/btnLogin"
        app:layout_constraintEnd_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toTopOf="@+id/btnLogin" />

    <ImageView
        android:id="@+id/MoneteLogo"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/moneteicon2"
        app:layout_constraintEnd_toEndOf="@+id/editTxtEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTxtEmail"
        app:layout_constraintTop_toBottomOf="@+id/toolbarLogin" />

    <EditText
        android:id="@+id/editTxtPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/inputbox"
        android:ems="10"
        android:hint="@string/loginPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTxtEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTxtEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTxtEmail" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/LoginTitle" />

    <Button
        android:id="@+id/btnForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/forgotpassword"
        android:textAllCaps="false"
        android:textColor="#51331F"
        app:layout_constraintStart_toStartOf="@+id/editTxtPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTxtPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>