<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cons_card_history"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="#F5F5F5"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_margin="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/box">

            <ImageView
                android:id="@+id/tag_img"
                android:layout_width="102dp"
                android:layout_height="97dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_directions_car_black_24dp" />

            <TextView
                android:id="@+id/rupiah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/rupiahmonete"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/tag_img"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/hist_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/hist_money"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/rupiah"
                app:layout_constraintTop_toTopOf="@+id/rupiah" />

            <View
                android:id="@+id/line"
                android:layout_width="50dp"
                android:layout_height="4dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="#8B6B62"
                app:layout_constraintStart_toStartOf="@+id/rupiah"
                app:layout_constraintTop_toBottomOf="@+id/rupiah" />

            <TextView
                android:id="@+id/hist_memo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/nunito"
                android:text="@string/hist_memo"
                app:layout_constraintStart_toStartOf="@+id/line"
                app:layout_constraintTop_toBottomOf="@+id/line" />

            <TextView
                android:id="@+id/hist_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito"
                android:text="@string/hist_type"
                app:layout_constraintBottom_toTopOf="@+id/rupiah"
                app:layout_constraintStart_toStartOf="@+id/rupiah" />

            <TextView
                android:id="@+id/hist_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:text="@string/hist_id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>